[package]
name = "joker_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.0", features = ["rt", "rt-multi-thread", "macros"] }
notify-rust = "4"

[dev-dependencies]
mockito = "1.7.0"
serde_json = "1.0.140"
